[package]
name = "git_year_one"
version = "0.1.0"
authors = ["Ion Ostafi <ostafi_ion@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
chrono = "0.4"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
confy = "0.4"
serde = { version = "1.0", features = ["derive"] }
directories = "2.0.2"
colorful = "0.2.1"
